typee_err_588.txt
  File "/tmp/typee_588.py", line 219
    rel_enh = np.absolute(ff_unitcell
                         ^
SyntaxError: '(' was never closed
